--- a/example/hello-world/Cargo.toml
+++ b/example/hello-world/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "pico-rt"
+name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pico-rt = { path = "../../rt" }
