--- a/hal/Cargo.toml
+++ b/hal/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "pico-rt"
+name = "pico-hal"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rp2040-boot2 = "0.3.0"
+volatile-register = "0.2.2"
