--- a/rt/Cargo.toml
+++ b/rt/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 rp2040-boot2 = "0.3.0"
+util = { path = "../util" }
+pico-hal = { path = "../hal" }
+lock_api = "0.4.11"
 
 [build-dependencies]
 cc = "1.0.83"
