--- a/example/async-test/Makefile
+++ b/example/async-test/Makefile
@@ -1,6 +1,13 @@
 prog := async-test
+OPENOCD ?= openocd
 
-.PHONY: write
+.PHONY: write debug-write
+
+
+debug-write:
+	cargo build
+	$(OPENOCD) -f interface/cmsis-dap.cfg -f target/rp2040.cfg -s tcl -c "program ../../target/thumbv6m-none-eabi/debug/$(prog) verify reset exit"
+
 
 write:
 	cargo build --release
