--- a/example/dual-core/Cargo.toml
+++ b/example/dual-core/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 pico-rt = { path = "../../rt" }
 pico-hal = { path = "../../hal" }
 util = { path = "../../util" }
+aligned = "0.4.2"
