--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = [ "example/async-test", "example/hello-world", "example/dual-core", "hal","rt", "util"]
+members = [ "example/async-test", "example/hello-world", "example/dual-core", "hal","rt", "util", "example/interrupt"]
 resolver = "2"
